Details    : Some RPCs that should not be resent are being resent.  This
	     can cause inconsistencies in the RPC state machine.  Do not
	     resend such requests.

Severity   : normal
Frequency  : rare, only with NFS export
Bugzilla   : 11669
Description: Crash on NFS re-export node
Details    : under very unusual load conditions an assertion is hit in
	     ll_intent_file_open()

------------------------------------------------------------------------------

TBD         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.9
       * Support for kernels:
        2.6.9-42.0.3EL (RHEL 4)
        2.6.5-7.276 (SLES 9)
        2.4.21-40.0.1.EL (RHEL 3)
        2.6.12.6 vanilla (kernel.org)
       * bug fixes

Severity   : critical
Frequency  : rare
Bugzilla   : 11125
Description: "went back in time" messages on mds failover
Details    : The greatest transno may be lost when the current operation
	     finishes with an error (transno==0) and the client's last_rcvd
	     record is over-written. Save the greatest transno in the
	     mds_last_transno for this case.

Severity   : minor
Frequency  : always for specific kernels and striping counts
Bugzilla   : 11042
Description: client may get "Matching packet too big" without ACL support
Details    : Clients compiled without CONFIG_FS_POSIX_ACL get an error message
	     when trying to access files in certain configurations.  The
	     clients should in fact be denied when mounting because they do
	     not understand ACLs.

Severity   : major
Frequency  : Cray XT3 with more than 4000 clients and multiple jobs
Bugzilla   : 10906
Description: many clients connecting with IO in progress causes connect timeouts
Details    : Avoid synchronous journal commits to avoid delays caused by many
	     clients connecting/disconnecting when bulk IO is in progress.
	     Queue liblustre connect requests on OST_REQUEST_PORTAL instead of
	     OST_IO_PORTAL to avoid delays behind potentially many pending